--- a/workshop/2025-august/assets/templates/.copilot-instructions-template.md
+++ b/workshop/2025-august/assets/templates/.copilot-instructions-template.md
@@ -41,9 +41,9 @@ This is a Next.js e-commerce application built with modern web technologies. The
 
 - Use async/await for promises
 - Implement proper error handling
-- Validate all inputs with schemas
-- Use TypeScript for API response types
-
+- Validate all inputs with runtime schemas (e.g., Zod) and narrow types from validation
+- Use TypeScript for API response types and enforce unknown → validated types at boundaries
+- Never expose secrets (API keys, tokens) to the client; keep them server-only via environment variables
 ## E-commerce Specific Patterns
 
 ### Product Management
